syntax = "proto3";

option java_package = "com.example.user.grpc";
option java_outer_classname = "HelloWorldProto";

service Greeter {
  rpc SaveUser (SaveUserRequest) returns (SaveUserReply) {}
  rpc GetUsers (GetUsersRequest) returns (GetUsersReply) {}
}

message SaveUserRequest {
  string name = 1;
}

message SaveUserReply {
  string message = 1;
}

message GetUsersRequest {
}

message GetUsersReply {
  string message = 1;
}